fix/ECOMM-Forlocks-26-FixAdaptiveCountVisibleProducts
* save changes

* add features

* add features 2

--- a/src/components/visual/modal/Modal.scss
+++ b/src/components/visual/modal/Modal.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding: 24px 32px;
+  padding: 40px 45px 15px 45px;
   min-width: 300px;
   max-width: 90%;
   max-height: 90%;
@@ -40,10 +40,10 @@
 .modal-close {
   display: block;
   position: absolute;
-  top: 24px;
-  right: 32px;
-  width: 14px;
-  height: 14px;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
   transform: rotate(0deg);
   transition: transform 0.3s ease;
   cursor: pointer;
