--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -84,7 +84,7 @@
     position: absolute;
     left: 32px;
     right: 32px;
-    top: -1px; 
+    top: -1px;
     border-top: 1px solid $grey-color;
   }
 
@@ -111,8 +111,6 @@
     object-fit: cover;
     transition: all 0.3s ease;
   }
-
-  
 
   h3 {
     font-weight: 700;
@@ -272,20 +270,19 @@ p {
 @media (max-width: 1024px) and (min-width: 769px) {
   .cart_page {
     grid-template-columns: 1fr;
-  
+
   }
   .cart_container {
     grid-column: 1 / span 1;
     grid-row: 2 / span 1;
   }
-  
-  
+
   .cart_aside {
     width: 100%;
     margin-top: 24px;
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
-   
+
     form {
            span {
          max-width: 100%;
@@ -308,8 +305,7 @@ p {
       margin-top: 24px;
     }
   }
-  
-  
+
   .cart_aside {
     width: 100%;
     min-width: 100%;
@@ -327,10 +323,10 @@ p {
   .product-card.cart{
     padding: 24px 0px;
     ::before {
-      
+
       left: 0px;
       right: 0px;
-      top: -1px; 
+      top: -1px;
       border-top: 1px solid $grey-color;
     }
   }
@@ -339,7 +335,10 @@ p {
     flex-direction: column;
     align-items: start;
   }
- }
+}
 
-
-
+@media (max-width: 500px) {
+  .product-card.cart {
+    flex-direction: column-reverse;
+  }
+}
